# DingoQuadruped

./: .gitignore
dingo_ws/: MOCK_MJPEG_SETUP.md
dingo_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
dingo_ws/log/: latest_build
dingo_ws/src/dingo/: CMakeLists.txt  package.xml
dingo_ws/src/dingo/launch/: dingo.launch.py  dingo_gazebo_sim.launch.py  twist_keyboard_test.launch.py  twist_teleop_dingo_sim.launch.py
dingo_ws/src/dingo/scripts/: cmd_vel_to_joy_bridge.py  dingo_driver.py  run_robot.py
dingo_ws/src/dingo_behaviors/config/: poses.yaml
dingo_ws/src/dingo_behaviors/launch/: behaviors.launch.py
dingo_ws/src/dingo_behaviors/scripts/: mode_manager.py
dingo_ws/src/dingo_control/: CMakeLists.txt  package.xml
dingo_ws/src/dingo_control_msgs/: package.xml
dingo_ws/src/dingo_description/: CMakeLists.txt
dingo_ws/src/dingo_description/launch/: dingo_rviz.launch.py
dingo_ws/src/dingo_description/urdf/: dingo.urdf
dingo_ws/src/dingo_gazebo/launch/: simulation.launch.py
dingo_ws/src/dingo_hardware_interfacing/dingo_input_interfacing/: CMakeLists.txt
dingo_ws/src/dingo_hardware_interfacing/dingo_peripheral_interfacing/: CMakeLists.txt  package.xml
dingo_ws/src/dingo_hardware_interfacing/dingo_peripheral_interfacing/scripts/: dingo_lcd_interfacing.py  mock_battery_publisher.py  odom_publisher.py
dingo_ws/src/dingo_hardware_interfacing/dingo_servo_interfacing/: CMakeLists.txt
dingo_ws/src/dingo_utilities/: package.xml  setup.py
dingo_ws/src/jax/: CMakeLists.txt  package.xml
dingo_ws/src/jax/launch/: jax.launch.py  jax_gazebo_sim.launch.py
dingo_ws/src/jax/scripts/: jax_driver.py  run_robot.py
dingo_ws/src/jax_behaviors/: CMakeLists.txt  package.xml
dingo_ws/src/jax_control/: package.xml
dingo_ws/src/jax_control_msgs/: CMakeLists.txt  package.xml
dingo_ws/src/jax_control_msgs/msg/: JointSpace.msg
dingo_ws/src/jax_description/launch/: jax_rviz.launch.py  jax_state_publisher.launch.py
dingo_ws/src/jax_description/urdf/: jax.urdf
dingo_ws/src/jax_gazebo/: CMakeLists.txt  package.xml
dingo_ws/src/jax_gazebo/config/: controllers.yaml
dingo_ws/src/jax_gazebo/launch/: simulation.launch.py
dingo_ws/src/jax_gazebo/scripts/: joint_states_gazebo_plugin.py
dingo_ws/src/jax_hardware_interfacing/jax_input_interfacing/: package.xml
dingo_ws/src/jax_hardware_interfacing/jax_peripheral_interfacing/: CMakeLists.txt  package.xml
dingo_ws/src/jax_hardware_interfacing/jax_peripheral_interfacing/scripts/: mock_battery_publisher.py
dingo_ws/src/jax_hardware_interfacing/jax_peripheral_interfacing/src/jax_peripheral_interfacing/: IMU.py  imu_test.py
dingo_ws/src/jax_hardware_interfacing/jax_servo_interfacing/: package.xml
dingo_ws/src/jax_peripheral_msgs/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
install/dingo/lib/dingo/: dingo_driver.py  dingo_mode_manager.py  run_robot.py
install/dingo/share/dingo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
install/dingo_control/share/dingo_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  package.zsh
install/dingo_control_msgs/share/dingo_control_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  (+2 more)
log/: latest_build
(+552 files in other folders)
